--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </style>
 </head>
 <body>
-    <a href="https://bit.ly/3SS1jSL">
+    <a href="https://kissoffering.com/z7qvwidizq?key=c012f231efcda04740aef8adca352370">
         <video class="video-background" autoplay muted loop>
             <source src="vid/girl.mp4" type="video/mp4">
         </video>
@@ -89,7 +89,7 @@
         
         <div class="live-badge">LIVE</div>
         <div class="profile-info">
-            <a href="https://bit.ly/3SS1jSL">
+            <a href="https://kissoffering.com/z7qvwidizq?key=c012f231efcda04740aef8adca352370">
                 <img src="profil/profil.jpeg" alt="Profile Picture">
             </a>
             <div class="name">Winda Lucy</div>
@@ -97,32 +97,32 @@
              
         </div>
         <div class="profile-pictures">
-            <a href="https://bit.ly/3SS1jSL">
+            <a href="https://kissoffering.com/z7qvwidizq?key=c012f231efcda04740aef8adca352370">
                 <video autoplay muted loop>
                     <source src="profil/video1.mp4" type="video/mp4">
                 </video>
             </a>
-            <a href="https://bit.ly/3SS1jSL">
+            <a href="https://kissoffering.com/z7qvwidizq?key=c012f231efcda04740aef8adca352370">
                 <video autoplay muted loop>
                     <source src="profil/video2.mp4" type="video/mp4">
                 </video>
             </a>
-            <a href="https://bit.ly/3SS1jSL">
+            <a href="https://kissoffering.com/z7qvwidizq?key=c012f231efcda04740aef8adca352370">
                 <video autoplay muted loop>
                     <source src="profil/video3.mp4" type="video/mp4">
                 </video>
             </a>
-            <a href="https://bit.ly/3SS1jSL">
+            <a href="https://kissoffering.com/z7qvwidizq?key=c012f231efcda04740aef8adca352370">
                 <video autoplay muted loop>
                     <source src="profil/video4.mp4" type="video/mp4">
                 </video>
             </a>
-            <a href="https://bit.ly/3SS1jSL">
+            <a href="https://kissoffering.com/z7qvwidizq?key=c012f231efcda04740aef8adca352370">
                 <video autoplay muted loop>
                     <source src="profil/video5.mp4" type="video/mp4">
                 </video>
             </a>
-            <a href="https://bit.ly/3SS1jSL">
+            <a href="https://kissoffering.com/z7qvwidizq?key=c012f231efcda04740aef8adca352370">
                 <video autoplay muted loop>
                     <source src="profil/video6.mp4" type="video/mp4">
                 </video>
